# policyengine-household-api

./: .dockerignore  .env-example  .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.build  Dockerfile.test  Makefile  README.md  alembic.ini  changelog.yaml  changelog_entry.yaml  docker-compose.yml  docker-readme.md  embeddings.h5  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.claude/skills/: database-migrations.md
.github/: PULL_REQUEST_TEMPLATE.md  bump_version.py  copilot-instructions.md  is-version-number-acceptable.sh  publish-git-tag.sh
.github/scripts/: build-and-push-image.sh  check-changelog-fragment.sh  check_modal_release_alembic.py  check_modal_release_body.py  check_modal_release_config.py  check_updates.py  cloud-run-deploy-analytics.sh  cloud-run-deploy-failover.sh  cloud-run-deploy-lib.sh  cloud-run-testing-deploy-and-load-test.sh  cloud-run-warm-modal-via-gateway.sh  cloud-run-warm-workers.sh  cloud_run_apply_scaling_controls.py  cloud_run_apply_startup_probe.py  cloud_run_failover_channels.py  cloud_run_gateway_load_test.py  cloud_run_prewarm_mfb_via_gateway.py  commit-weekly-update.sh  create_pr.sh  delete-appengine-version.sh  deploy-app-engine.sh  fetch_auth0_test_token.py  health-check.sh  modal-cleanup-apps.sh  modal-custom-domain-smoke.sh  modal-deploy-release.sh  modal-get-url.sh  modal-sync-secrets.sh  modal_active_worker_apps.py  modal_extract_versions.py  modal_release_check_common.py  modal_require_active_channels.py  plan_docker_tags.py  resolve_modal_release_config.py  run-deployed-tests-for-modal-channels.sh  (+31 more)
alembic/: env.py  script.py.mako
changelog/: index.html
changelog.d/: 1460.fixed.md  1496.fixed  1510.fixed.md  1513.fixed.md  1515.fixed.md  1517.fixed.md  1519.changed.md  1522.changed.md  1523.changed.md  1525.changed.md  1527.changed.md  1531.fixed.md  1533.changed.md  1535.added.md  1537.fixed.md  1539.fixed.md  1541.added.md  1543.fixed.md  1545.fixed.md  1548.added.md  1551.added.md  1553.fixed.md  1555.fixed.md  1558.changed.md  1560.fixed.md  1562.added.md  1566.removed.md  1569.fixed.md  1573.changed.md  1575.fixed.md  1577.fixed.md  1579.added.md  1581.fixed.md  1588.fixed.md  1590.fixed.md  1594.fixed.md  1596.changed.md  1599.fixed.md  1603.fixed.md  1605.changed.md  (+43 more)
config/: README.md  custom.yaml.example  default.yaml  development.yaml.example  example_values.env  local.yaml.example  production.yaml.example  test.yaml  test_with_auth.yaml
cookbook/: index.html
docker/: Dockerfile.api  docker-compose.external.yml  docker-compose.yml  start.sh
docs/: changelog.md  index.md  migration-to-api-v2.md  period-keys.md  request-format.md  response-format.md
gcp/: Dockerfile  README.md  bump_country_package.py  dispatch.yaml  export.py
libs/household-analytics/: README.md  pyproject.toml
libs/household-analytics/policyengine_household_analytics/: analytics_setup.py  events.py  orm.py  persistence.py
libs/household-analytics/policyengine_household_analytics/alembic/: env.py
libs/household-analytics/policyengine_household_analytics/alembic/versions/: 20260508_0001_existing_visits_baseline.py  20260512_0003_cap_analytics_variable_names.py  20260519_0004_calculate_analytics_routing_version.py
libs/household-api/: README.md  pyproject.toml
libs/household-api/policyengine_household_api/: api.py  constants.py  country.py  deployment.py  openapi_spec.yaml
libs/household-api/policyengine_household_api/analytics/: __init__.py  cloud_tasks.py  config.py  persistence.py
libs/household-api/policyengine_household_api/data/: analytics_setup.py  models.py
libs/household-api/policyengine_household_api/decorators/: analytics.py  auth.py
libs/household-api/policyengine_household_api/endpoints/: analytics.py  home.py  household.py
libs/household-api/policyengine_household_api/failover/: __init__.py  cloud_run_analytics_writer.py  cloud_run_gateway.py  cloud_run_gateway_wsgi.py  cloud_run_worker.py  manifest.py
libs/household-api/policyengine_household_api/modal_release/: _image_setup.py  gateway_app.py  images.py  prune_manifest.py  release_config.py  rewrite_manifest.py  update_manifest.py  worker_app.py  worker_dispatch.py
libs/household-api/policyengine_household_api/models/: __init__.py  analytics.py  household.py
libs/household-api/policyengine_household_api/utils/: __init__.py  config_loader.py  variable_validation.py
libs/household-common/: README.md  pyproject.toml
libs/household-common/policyengine_household_common/: analytics_migration.py  config_loader.py  constants.py  deprecated_inputs.py  dispatch_codec.py  gateway.py  household.py  release_config.py  release_manifest.py  request_limits.py  routing_metadata.py  variable_usage_analytics.py  version_routing.py  worker_dispatch.py
libs/household-common/policyengine_household_common/observability/: __init__.py  flask.py  segments.py
migrations/: 2026_05_08_calculate_variable_usage_analytics.sql
period-keys/: index.html
policyengine_api_light/: api.py  constants.py  country.py  setup_data.py  worker.py
policyengine_household_api/: api.py  constants.py  country.py  openapi_spec.yaml  version_config.py  version_routing.py
projects/analytics-api/: README.md  pyproject.toml
projects/analytics-api/policyengine_household_analytics_api/: wsgi.py
projects/analytics-api/tests/: test_isolation.py
projects/cloud-run-failover-api/: README.md  pyproject.toml
projects/cloud-run-failover-api/policyengine_household_failover/: cloud_run_gateway.py  cloud_run_gateway_wsgi.py  cloud_run_worker.py  cloud_run_worker_wsgi.py  manifest.py
projects/modal-api/: README.md  pyproject.toml
projects/modal-api/policyengine_household_modal/: analytics_revision.py  canary_app.py  gateway_app.py  google_credentials.py  images.py  prune_manifest.py  rewrite_manifest.py  update_manifest.py  warm_worker.py  worker_app.py
request-format/: index.html
response-format/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py
under_development/: README.md  requirements.txt
(+274 files in other folders)
