# Virtual workspace root: no [project] section. Each deployable service and
# shared lib is a workspace member with its own pyproject.toml; one uv.lock at
# this root covers them all. Repo-wide tool configuration lives here.

[tool.uv.workspace]
members = ["libs/*", "projects/*"]

[dependency-groups]
dev = [
    "pytest-timeout",
    "ruff>=0.9.0",
    "towncrier>=24.8.0",
]

[tool.pytest.ini_options]
# The repo root is not on sys.path via editable installs anymore (they point
# at libs/), so put it there for every pytest run: the deployed and fixture
# suites import shared data as `tests.data.…`.
pythonpath = ["."]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.towncrier]
name = "policyengine-household-api"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
