[project]
name = "policyengine-household-api"
version = "0.29.4"
description = "PolicyEngine Household API"
readme = "README.md"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" },
]
requires-python = ">=3.12"
dependencies = [
    "policyengine-household-common==0.29.4",
    "policyengine-household-analytics==0.29.4",
    "Authlib>=1.7.0",
    "flask>=2.2",
    "flask-cors>=3",
    "google-cloud-storage",
    "google-cloud-tasks",
    "gunicorn",
    "inflect",
    "joserfc>=1.6.0",
    "modal>=1.3.0",
    "policyengine-core==3.30.3",
    "policyengine_canada==0.96.3",
    "policyengine-ng==0.5.1",
    "policyengine-il==0.1.0",
    "policyengine_uk==2.88.18",
    "policyengine_us==1.771.2",
    "pyjwt",
    "pyyaml>=6",
    "Flask-Caching==2.0.2",
    "urllib3<=1.26.20,>=1.21.1",
    "python-dotenv",
    "Flask-Limiter",
    "pydantic",
    "policyengine-observability[flask,google]>=1.4.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_household_api"]

[tool.uv.sources]
policyengine-household-common = { workspace = true }
policyengine-household-analytics = { workspace = true }
