[project]
name = "policyengine-household-failover-api"
version = "0.29.5"
description = "Cloud Run failover gateway and fallback workers for the PolicyEngine Household API"
readme = "README.md"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" },
]
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]
# Base closure = the slim gateway image: no country model packages. The
# fallback worker image installs the `worker` extra, which pulls the full
# core application it dispatches calculations to.
dependencies = [
    "policyengine-household-common==0.29.5",
    "flask>=2.2",
    "google-auth",
    "google-cloud-storage",
    "gunicorn",
    "modal>=1.3.0",
]

[project.optional-dependencies]
worker = [
    "policyengine-household-api==0.29.5",
]

[tool.uv.sources]
policyengine-household-common = { workspace = true }
policyengine-household-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_household_failover"]
